k8/dragon-go.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "10"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"9"},"creationTimestamp":"2019-11-09T17:55:17Z","generation":9,"labels":{"app":"dragon-go"},"name":"dragon-go","namespace":"dragon-go","resourceVersion":"744371","selfLink":"/apis/apps/v1/namespaces/dragon-go/deployments/dragon-go","uid":"36c5ef3e-c002-4445-8e08-8109f9fc79bf"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app" [...]
  creationTimestamp: "2019-11-09T17:55:17Z"
  generation: 10
  labels:
    app: dragon-go
  name: dragon-go
  namespace: dragon-go
  resourceVersion: "744794"
  selfLink: /apis/apps/v1/namespaces/dragon-go/deployments/dragon-go
  uid: 36c5ef3e-c002-4445-8e08-8109f9fc79bf
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dragon-go
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: dragon-go
    spec:
      containers:
      - env:
        - name: TYPEORM_CONNECTION
          value: postgres
        - name: TYPEORM_HOST
          value: postgres
        - name: TYPEORM_USERNAME
          valueFrom:
            secretKeyRef:
              key: user
              name: postgres-secret
        - name: TYPEORM_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: postgres-secret
        - name: TYPEORM_DATABASE
          value: dragon-go
        image: sirwojtek/dragon-go:latest
        imagePullPolicy: Always
        name: dragon-go
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /root/dragon-go/backend/environment
          name: dragon-go-secret
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: dragon-go-secret
        secret:
          defaultMode: 420
          secretName: dragon-go-secret
status:
  conditions:
  - lastTransitionTime: "2019-11-09T17:55:17Z"
    lastUpdateTime: "2019-11-15T18:31:49Z"
    message: ReplicaSet "dragon-go-5d7fbd694b" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2019-11-15T18:34:50Z"
    lastUpdateTime: "2019-11-15T18:34:50Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  observedGeneration: 10
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
