k8/dragon-go.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dragon-go
  name: dragon-go
  namespace: dragon-go
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: dragon-go
