k8/dragon-go.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dragon-go
spec:
  rules:
  - host: dragon-go.d20md.com
    http:
      paths:
      - backend:
          serviceName: dragon-go
          servicePort: 3000
